After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660464 - meta-window-group: Plug memory leak
meta-window-group: Plug memory leak
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-29 13:17 UTC by drago01
Modified: 2011-09-29 13:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
meta-window-group: Plug memory leak (1.48 KB, patch)
2011-09-29 13:17 UTC, drago01
committed Details | Review

Description drago01 2011-09-29 13:17:14 UTC
See patch.
Comment 1 drago01 2011-09-29 13:17:16 UTC
Created attachment 197763 [details] [review]
meta-window-group: Plug memory leak

We have to free the list returned by clutter_actor_get_effects() .
Comment 2 Emmanuele Bassi (:ebassi) 2011-09-29 13:19:14 UTC
Review of attachment 197763 [details] [review]:

looks obviously correct.
Comment 3 drago01 2011-09-29 13:35:56 UTC
Attachment 197763 [details] pushed as 1b4dce6 - meta-window-group: Plug memory leak